# websum-to-git

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.optimized  README.md  config.example.yaml  config.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: publish-ghcr.yml
.websum_to_git/repos/tiaot33_programming/00-临时/: 20251121-101502-https---mp-weixin-qq-com-s-roURrNNBJ2J5ZqdFuU1tkA.md
docs/: development.md  headless_strategies.md  quickstart.md
openspec/changes/add-tgbot-html-summary-sync/: proposal.md  tasks.md
openspec/changes/archive/2025-11-20-add-tgbot-html-summary-sync/: design.md  tasks.md
openspec/changes/archive/2025-11-20-add-tgbot-html-summary-sync/specs/tgbot-html-summary/: spec.md
openspec/specs/tgbot-html-summary/: spec.md
src/: main.py
src/websum_bot/: __init__.py  __main__.py  bot.py  command_parser.py  config.py  github_client.py  html_extractor.py  llm_client.py  markdown_note.py
src/websum_to_git/: CLAUDE.md  __init__.py  bot.py  config.py  github_client.py  html_processor.py  llm_client.py  markdown_chunker.py  pipeline.py  screenshot.py  task_queue.py  telegraph_client.py  url_utils.py
src/websum_to_git/fetchers/: __init__.py  base.py  camoufox_helper.py  defuddle.py  factory.py  firecrawl.py  github.py  headless.py  html_headers.py  html_utils.py  mirror.py  requests_fetcher.py  screenshot.py  structs.py  twitter.py
src/websum_to_git/fetchers/headless_strategies/: __init__.py  custom.py  registry.py  telegram.py  twitter.py
src/websum_to_git/prompts/: final_summary.md  generate_tags.md  translate_to_chinese.md
tests/: camoufox_demo.py  conftest.py  test_bot.py  test_camoufox_helper.py  test_command_parser.py  test_config.py  test_defuddle_pipeline.py  test_fetchers.py  test_fetchers_factory.py  test_html_processor.py  test_llm_client.py  test_markdown_chunker.py  test_markdown_note.py  test_pipeline.py  test_pipeline_retry.py  test_url_utils.py
tests/fixtures/: sample_markdown.md  test.md
websum_to_git/: bot.py  config.py  github_client.py  html_processor.py  llm_client.py  main.py  pipeline.py
